Разметка личного проекта

--- a/index.html
+++ b/index.html
@@ -1,12 +1,211 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Gllacy Shop</title>
+</head>
 
-  </body>
+<body class="main-body">
+  <!-- Header -->
+  <header class="main-header">
+    <div class="container">
+      <a href="/index">
+        <img class="logo" src="index.html" width="153" height="63" alt="Gllacy Shop»"></a>
+      <nav class="main-navigation">
+        <ul class="top-menu">
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О компании</a></li>
+        </ul>
+      </nav>
+      <div class="search-block">
+        <a class="login" href="#"></a>
+      </div>
+      <div class="user-block">
+        <a class="login" href="#">Вход</a>
+      </div>
+      <div class="basket-block">
+        <a class="login" href="#">Пусто</a>
+      </div>
+      <p>С 10 до 20, ежедневно
+        <br>
+        <span class="phone"> 8 812 450-25-25</span></p>
+    </div>
+  </header>
+  <!-- Main -->
+  <main>
+    <div class="slider">
+      <div class="img-1"><img src="http://placehold.it/1200x600">>
+        <legend>Крем-брюле и пломбир с малиновым джемом</legend>
+        <div class="btn-slider"><a href="#">Давайте оба!</a>
+        </div>
+      </div>
+      <div class="img-2" height:600px; width:1200;>
+        <p>Шоколад и пломбир
+          <br>с вишневым джемом</p>
+        <div class="btn-slider"><a href="#">Давайте оба!</a>
+        </div>
+      </div>
+      <div class="img-3" height:600px; width:1200;>
+        <p>Сливочное и пломбир
+          <br>с шоколадом</p>
+        <div class="btn-slider"><a href="#">Давайте оба!</a>
+        </div>
+      </div>
+      <div>
+        <ul class="checkbox-list ">
+          <li>
+            <a class="checkbox checked " href="# "></a>
+          </li>
+          <li>
+            <a class="checkbox " href="# "></a>
+          </li>
+          <li>
+            <a class="checkbox " href="# "></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="promo">
+      <div class="promo-link"><img src="http://placehold.it/560x225"></div>
+      <h1>Малинка даром!</h1>
+      <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+      <div class="btn-slider"><a href="#">Хочу варенье!</a>
+      </div>
+    </div>
+    <div class="promo-right"><img src="http://placehold.it/560x225"></div>
+    <h1>Шоколадки даром!</h1>
+    <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+    <div class="btn-slider"><a href="#">Хочу шоколадки!</a>
+    </div>
+    <div class="goods">
+      <div class="good">
+        <div class="good-link"><img src="http://placehold.it/267x267"></div>
+        <span class="good-price">310 руб/кг</span>
+        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <div class="hit">
+          <img src="img/hit.jpg" width="60" height="60" alt="">
+        </div>
+      </div>
+      <div class="good">
+        <div class="good-link"><img src="http://placehold.it/267x267"></div>
+        <span class="good-price">380 руб/кг</span>
+        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+        <div class="hit">
+          <img src="img/hit.jpg" width="60" height="60" alt="">
+        </div>
+      </div>
+      <div class="good">
+        <div class="good-link"><img src="http://placehold.it/267x267"></div>
+        <span class="good-price">355 руб/кг</span>
+        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        <div class="hit">
+          <img src="img/hit.jpg" width="60" height="60" alt="">
+        </div>
+      </div>
+      <div class="good">
+        <div class="good-link"><img src="http://placehold.it/267x267"></div>
+        <span class="good-price">415 руб/кг</span>
+        <a href="#">Сливочно-клубничное с карамельной подливкой</a>
+        <div class="hit">
+          <img src="img/hit.jpg" width="60" height="60" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="shop-info"><img src="http://placehold.it/1145x306">
+      <div class="info-block">
+        <h2>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+        <div class="block-left">
+          <div class="icon-info">
+            <img src="img/icon1.jpg" width="47" height="47" alt="">
+          </div>
+          <p>Все наше мороженое изготавливается на собственном
+            <br>производстве, с использованием современного оборудования
+            <br>и проверенных временем технологий.</p>
+          <div class="icon-info">
+            <img src="img/icon2.jpg" width="47" height="47" alt="">
+          </div>
+          <p>Для приготовления мороженого используются настоящие
+            <br>сливки и молоко высочайшего качества. Все дополнительные
+            <br>ингредиенты и добавки произведены из натурального,
+            <br>экологически чистого сырья..</p>
+        </div>
+        <div class="block-right">
+          <div class="icon-info">
+            <img src="img/icon3.jpg" width="47" height="47" alt="">
+          </div>
+          <p>Закупка ингредиентов производится только у проверенных
+            <br>фермерских хозяйств и компаний, с которыми нас связывает
+            <br>долговременное сотрудничество.</p>
+          <div class="icon-info">
+            <img src="img/icon4.jpg" width="47" height="47" alt="">
+          </div>
+          <p>Доставка нашего мороженого до заказчиков осуществляется
+            <br>в специальном термопаке, которая не дает мороженому
+            <br>растаять в пути и позволяет ему сохранить свой
+            <br>превосходный вкус.
+        </div>
+      </div>
+    </div>
+    <div class="new-block">
+      <div class="shop-info"><img src="http://placehold.it/560x220">
+      </div>
+      <div class="new-title">Новое в нашем блоге</div>
+      <h2><b><a href="#">10 способов сервировки фруктовых щербетов к столу</a></b></h2>
+    </div>
+    <div class="mail-block">
+      <div class="mail-info"><img src="http://placehold.it/560x220">
+      </div>
+      <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
+      <form class="new-form" action="#" method="post">
+        <input type="mail" name="mail" value="" placeholder="Электронная почта">
+        <button class="btn" type="submit">Отправить</button>
+      </form>
+    </div>
+    <div class="map">
+      <div class="map-list"><img src="http://placehold.it/1200x400">
+        <img src="img/marker.png" width="78" height="138" alt="">
+        <div class="contact">
+          <p>Адрес главного офиса и
+            <br> офлайн магазина:
+            <span class="contact-g"><b>ул. Большая Конюшенная
+            <br> 19/8, Санкт-Петербург</b></span>Для заказов по телефону:
+            <br>
+            <span class="contact-g"><b>8 812 450-25-25</b></span>(с 10 до 20 ежедневно)</p>
+        </div>
+        <div class="btn-slider">
+          <a href="#">Форма обратной связи</a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- Footer -->
+  <footer class="main-footer">
+    <div class="container">
+      <section class="footer-social">
+        <a class="social-btn social-btn-tv" href="#">Твитер</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
+      </section>
+      <section class="footer-navigation">
+        <img src="http://placehold.it/16x16">
+        <ul class="footer-menu-left">
+          <li><a href="#"><b>Для поставщиков</b></a></li>
+          <li><a href="#">О производстве</a></li>
+        </ul>
+        <ul class="footer-menu-right">
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </section>
+      <section class="footer-copyright">
+        <p>Разработано:</p>
+        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      </section>
+    </div>
+  </footer>
+</body>
+
 </html>
