--- a/index.html
+++ b/index.html
@@ -10,171 +10,246 @@
   <!-- Header -->
   <header class="main-header">
     <div class="container">
-      <a href="/index">
-        <img class="logo" src="index.html" width="153" height="63" alt="Gllacy Shop»"></a>
+      <img class="logo" src="img/logo.png" width="153" height="63" alt="Gllacy Shop»">
       <nav class="main-navigation">
         <ul class="top-menu">
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О компании</a></li>
+          <li><a href="#">Каталог</a>
+            <div class="btn-menu"><a class="btn-menu-decor" href="#">Каталог</a>
+            </div>
+            <ul>
+              <li><a href="#">Новинки</a>
+              </li>
+              <li><a href="/inner.html">Сливочное</a>
+              </li>
+              <li><a href="#">Фруктовый лед</a>
+              </li>
+              <li><a href="#">Мелорин</a>
+              </li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка и оплата</a>
+          </li>
+          <li><a href="#">О компании</a>
+          </li>
         </ul>
       </nav>
-      <div class="search-block">
-        <a class="login" href="#"></a>
+      <div class="uzer">
+        <div class="uzer-list search-block">
+          <a class="uzer-decor" href="#"></a>
+          <div class="popup search-hover">
+            <form class="search-hover-form" action="#" method="post">
+              <input class="search-go" type="text" name="search" placeholder="Что ищем?">
+            </form>
+          </div>
+        </div>
+        <div class="uzer-list user-block">
+          <a class="uzer-decor" href="#">Вход</a>
+          <div class="popup uzer-block">
+            <form class="uzer-hover" action="#" method="post">
+              <input class="uzer-go" type="email" name="mail" placeholder="Электронная почта">
+              <input class="uzer-go" type="password" name="pass" placeholder="Пароль">
+              <button class="red-btn" type="submit">Войти
+              </button>
+              <div class="user-help">
+                <p class="help">
+                  <a class="forgot" href="#">Забыли пароль?</a>
+                  <a class="new-log" href="#">Новая регистрация</a>
+                </p>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="uzer-list basket-block">
+          <a class="uzer-decor" href="#">Пусто</a>
+          <div class="popup basket-hover">
+            <div class="good-basket">
+              <img src="http://placehold.it/20x20">
+              <span class="basket-text">Пломбир с апельсиновым джемом"</span>
+              <div class="basket-price">
+                <span class="heft">1,5кг</span>
+                <span class="expense">200 руб.</span>
+                <span class="result">300 руб.</span>
+              </div>
+            </div>
+            <div class="good-basket">
+              <img src="http://placehold.it/20x20">
+              <span class="basket-text">Клубничный пломбир с присыпкой из белого шоколада"</span>
+              <div class="basket-price">
+                <span class="heft">1,5кг</span>
+                <span class="expense">200 руб.</span>
+                <span class="result">300 руб.</span>
+              </div>
+            </div>
+            <span class="basket-result">Итого: 750 руб.</span>
+            <button class="red-btn" type="submit">Оформить заказ
+            </button>
+          </div>
+        </div>
+        <p class="uzer-text">С 10 до 20, ежедневно
+          <span class="phone"> 8 812 450-25-25
+          </span>
+        </p>
       </div>
-      <div class="user-block">
-        <a class="login" href="#">Вход</a>
-      </div>
-      <div class="basket-block">
-        <a class="login" href="#">Пусто</a>
-      </div>
-      <p>С 10 до 20, ежедневно
-        <br>
-        <span class="phone"> 8 812 450-25-25</span></p>
     </div>
   </header>
   <!-- Main -->
   <main>
-    <div class="slider">
-      <div class="img-1"><img src="http://placehold.it/1200x600">>
-        <legend>Крем-брюле и пломбир с малиновым джемом</legend>
-        <div class="btn-slider"><a href="#">Давайте оба!</a>
+    <div class="slide">
+      <div class="container">
+        <div class="slide slide-1">
+          <img src="http://placehold.it/400x600">
+          <span class="content-title">Крем-брюле и пломбир с малиновым джемом
+          </span>
+          <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
         </div>
       </div>
-      <div class="img-2" height:600px; width:1200;>
-        <p>Шоколад и пломбир
-          <br>с вишневым джемом</p>
-        <div class="btn-slider"><a href="#">Давайте оба!</a>
+      <div class="container">
+        <div class="slide slide-2">
+          <img src="http://placehold.it/400x600">
+          <span class="content-title">Шоколад и пломбир с вишневым джемом
+          </span>
+          <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
         </div>
       </div>
-      <div class="img-3" height:600px; width:1200;>
-        <p>Сливочное и пломбир
-          <br>с шоколадом</p>
-        <div class="btn-slider"><a href="#">Давайте оба!</a>
+      <div class="container">
+        <div class="slide slide-3">
+          <img src="http://placehold.it/400x600">
+          <span class="content-title">Сливочное и пломбир с шоколадом
+          </span>
+          <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
         </div>
       </div>
       <div>
-        <ul class="checkbox-list ">
-          <li>
-            <a class="checkbox checked " href="# "></a>
-          </li>
-          <li>
-            <a class="checkbox " href="# "></a>
-          </li>
-          <li>
-            <a class="checkbox " href="# "></a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="checkbox-list ">
+            <li>
+              <a class="checkbox checked" href="#"></a>
+            </li>
+            <li>
+              <a class="checkbox" href="#"></a>
+            </li>
+            <li>
+              <a class="checkbox" href="#"></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="promo">
-      <div class="promo-link"><img src="http://placehold.it/560x225"></div>
-      <h1>Малинка даром!</h1>
-      <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-      <div class="btn-slider"><a href="#">Хочу варенье!</a>
+      <div class="promo promo-left">
+        <span class="promo-title">Малинка даром!
+        </span>
+        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a href="#" class="red-btn">Хочу варенье!</a>
       </div>
-    </div>
-    <div class="promo-right"><img src="http://placehold.it/560x225"></div>
-    <h1>Шоколадки даром!</h1>
-    <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-    <div class="btn-slider"><a href="#">Хочу шоколадки!</a>
+      <div class="promo promo-right">
+        <span class="promo-title">Шоколадки даром!
+        </span>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a href="#" class="red-btn">Хочу шоколадки!</a>
+      </div>
     </div>
     <div class="goods">
-      <div class="good">
-        <div class="good-link"><img src="http://placehold.it/267x267"></div>
-        <span class="good-price">310 руб/кг</span>
-        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <div class="hit">
-          <img src="img/hit.jpg" width="60" height="60" alt="">
+      <div class="good good-box">
+        <div class="good-main"><img src="http://placehold.it/267x267">
         </div>
+        <div class="price">
+          <span class="good-price">310</span>
+          <span class="good-rub">руб</span>
+          <span class="good-kg">/кг</span>
+        </div>
+        <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </div>
-      <div class="good">
-        <div class="good-link"><img src="http://placehold.it/267x267"></div>
-        <span class="good-price">380 руб/кг</span>
-        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        <div class="hit">
-          <img src="img/hit.jpg" width="60" height="60" alt="">
+      <div class="good good-box">
+        <div class="good-main"><img src="http://placehold.it/267x267">
         </div>
+        <div class="price">
+          <span class="good-price">380</span>
+          <span class="good-rub">руб</span>
+          <span class="good-kg">/кг</span>
+        </div>
+        <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
       </div>
-      <div class="good">
-        <div class="good-link"><img src="http://placehold.it/267x267"></div>
-        <span class="good-price">355 руб/кг</span>
-        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <div class="hit">
-          <img src="img/hit.jpg" width="60" height="60" alt="">
+      <div class="good good-box">
+        <div class="good-main"><img src="http://placehold.it/267x267">
         </div>
+        <div class="price">
+          <span class="good-price">335</span>
+          <span class="good-rub">руб</span>
+          <span class="good-kg">/кг</span>
+        </div>
+        <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </div>
-      <div class="good">
-        <div class="good-link"><img src="http://placehold.it/267x267"></div>
-        <span class="good-price">415 руб/кг</span>
-        <a href="#">Сливочно-клубничное с карамельной подливкой</a>
-        <div class="hit">
-          <img src="img/hit.jpg" width="60" height="60" alt="">
+      <div class="good good-box">
+        <div class="good-main"><img src="http://placehold.it/267x267">
         </div>
+        <div class="price">
+          <span class="good-price">415</span>
+          <span class="good-rub">руб</span>
+          <span class="good-kg">/кг</span>
+        </div>
+        <a href="#" class="good-property">Сливочно-клубничное с карамельной подливкой</a>
       </div>
     </div>
-    <div class="shop-info"><img src="http://placehold.it/1145x306">
+    <div class="shop-info">
       <div class="info-block">
-        <h2>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-        <div class="block-left">
-          <div class="icon-info">
-            <img src="img/icon1.jpg" width="47" height="47" alt="">
+        <h2 class=shop-title>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+        <div class="block-list">
+          <div class="block-left">
+            <div class="icon-info">
+              <img src="img/icon1.jpg" width="47" height="47" alt="">
+            </div>
+            <p class="shop-text shop-icon">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+            <div class="icon-info">
+              <img src="img/icon2.jpg" width="47" height="47" alt="">
+            </div>
+            <p class="shop-text shop-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья..</p>
           </div>
-          <p>Все наше мороженое изготавливается на собственном
-            <br>производстве, с использованием современного оборудования
-            <br>и проверенных временем технологий.</p>
-          <div class="icon-info">
-            <img src="img/icon2.jpg" width="47" height="47" alt="">
+          <div class="block-right">
+            <div class="icon-info">
+              <img src="img/icon3.jpg" width="47" height="47" alt="">
+            </div>
+            <p class="shop-text shop-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+            <div class="icon-info">
+              <img src="img/icon4.jpg" width="47" height="47" alt="">
+            </div>
+            <p class="shop-text shop-icon">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
           </div>
-          <p>Для приготовления мороженого используются настоящие
-            <br>сливки и молоко высочайшего качества. Все дополнительные
-            <br>ингредиенты и добавки произведены из натурального,
-            <br>экологически чистого сырья..</p>
-        </div>
-        <div class="block-right">
-          <div class="icon-info">
-            <img src="img/icon3.jpg" width="47" height="47" alt="">
-          </div>
-          <p>Закупка ингредиентов производится только у проверенных
-            <br>фермерских хозяйств и компаний, с которыми нас связывает
-            <br>долговременное сотрудничество.</p>
-          <div class="icon-info">
-            <img src="img/icon4.jpg" width="47" height="47" alt="">
-          </div>
-          <p>Доставка нашего мороженого до заказчиков осуществляется
-            <br>в специальном термопаке, которая не дает мороженому
-            <br>растаять в пути и позволяет ему сохранить свой
-            <br>превосходный вкус.
         </div>
       </div>
     </div>
-    <div class="new-block">
-      <div class="shop-info"><img src="http://placehold.it/560x220">
+    <div class="new-mail">
+      <div class="new-block">
+        <div class="shop-info">
+        </div>
+        <div class="new-title">Новое в нашем блоге
+        </div>
+        <a href="#" class="new-go">10 способов сервировки фруктовых щербетов к столу</a>
       </div>
-      <div class="new-title">Новое в нашем блоге</div>
-      <h2><b><a href="#">10 способов сервировки фруктовых щербетов к столу</a></b></h2>
-    </div>
-    <div class="mail-block">
-      <div class="mail-info"><img src="http://placehold.it/560x220">
+      <div class="mail-block">
+        <div class="mail-info">
+        </div>
+        <p class="mail-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+        <form class="new-form" action="#" method="post">
+          <input class="mail-go" type="email" name="email" placeholder="Электронная почта">
+          <button class="red-btn" type="submit">Отправить
+          </button>
+        </form>
       </div>
-      <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
-      <form class="new-form" action="#" method="post">
-        <input type="mail" name="mail" value="" placeholder="Электронная почта">
-        <button class="btn" type="submit">Отправить</button>
-      </form>
     </div>
     <div class="map">
       <div class="map-list"><img src="http://placehold.it/1200x400">
-        <img src="img/marker.png" width="78" height="138" alt="">
         <div class="contact">
-          <p>Адрес главного офиса и
+          <p class="contact-text">Адрес главного офиса и
             <br> офлайн магазина:
-            <span class="contact-g"><b>ул. Большая Конюшенная
-            <br> 19/8, Санкт-Петербург</b></span>Для заказов по телефону:
+            <span class=" contact-text contact-g">ул. Большая Конюшенная <br> 19/8, Санкт-Петербург
+            </span>Для заказов по телефону:
             <br>
-            <span class="contact-g"><b>8 812 450-25-25</b></span>(с 10 до 20 ежедневно)</p>
+            <span class="contact-text contact-g">8 812 450-25-25
+            </span>(с 10 до 20 ежедневно)
+          </p>
         </div>
-        <div class="btn-slider">
+        <div class="red-btn">
           <a href="#">Форма обратной связи</a>
         </div>
       </div>
@@ -190,22 +265,46 @@
         <a class="social-btn social-btn-vk" href="#">ВКонтакте</a>
       </section>
       <section class="footer-navigation">
-        <img src="http://placehold.it/16x16">
-        <ul class="footer-menu-left">
+        <ul class="footer-navigation footer-menu-left">
           <li><a href="#"><b>Для поставщиков</b></a></li>
           <li><a href="#">О производстве</a></li>
         </ul>
-        <ul class="footer-menu-right">
+        <ul class="footer-navigation footer-menu-right">
           <li><a href="#">Наши документы</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
       </section>
       <section class="footer-copyright">
         <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="btn" href="https://htmlacademy.ru">Сделано в <span class="copyright-under">HTML Academy</span> © 2016</a>
       </section>
     </div>
   </footer>
+  <div class="connection-box">
+    <div class="popup connection-block">
+      <span class="connection-title">Мы обязательно вам ответим
+    </span>
+      <form class="connection" action="#" method="post">
+        <input class="name-connection name-hover name-entry" type="text" name="forename" placeholder="Как вас зовут">
+        <label class="connection-entry">
+          Как вас зовут
+          <input class="name" type="text" name="forename">
+        </label>
+        <input class="connection-email mail-hover mail-entry" type="email" name="mail" placeholder="Ваша почта для ответа">
+        <label class="connection-entry">
+          Ваша почта
+          <input class="name" type="text" name="mail">
+        </label>
+        <input class="connection-text text-hover text-entry" type="text" name="message" placeholder="Напишите что-нибудь...">
+        <label class="connection-message">
+          Напишите что-нибудь...
+          <input class="name" type="text" name="message">
+        </label>
+        <button class="red-btn" type="submit">Отправить
+        </button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
