Подготовка графики и текстовых стилей личного проекта

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gllacy Shop</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="main-body">
@@ -63,7 +64,7 @@
           <a class="uzer-decor" href="#">Пусто</a>
           <div class="popup basket-hover">
             <div class="good-basket">
-              <img src="http://placehold.it/20x20">
+              <img src="img/m-orange.png">
               <span class="basket-text">Пломбир с апельсиновым джемом"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -72,7 +73,7 @@
               </div>
             </div>
             <div class="good-basket">
-              <img src="http://placehold.it/20x20">
+              <img src="img/m-strawberry.png">
               <span class="basket-text">Клубничный пломбир с присыпкой из белого шоколада"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -97,7 +98,7 @@
     <div class="slide">
       <div class="container">
         <div class="slide slide-1">
-          <img src="http://placehold.it/400x600">
+          <img src="img/cream.png">
           <span class="content-title">Крем-брюле и пломбир с малиновым джемом
           </span>
           <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
@@ -105,7 +106,7 @@
       </div>
       <div class="container">
         <div class="slide slide-2">
-          <img src="http://placehold.it/400x600">
+          <img src="img/cream.png">
           <span class="content-title">Шоколад и пломбир с вишневым джемом
           </span>
           <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
@@ -113,7 +114,7 @@
       </div>
       <div class="container">
         <div class="slide slide-3">
-          <img src="http://placehold.it/400x600">
+          <img src="img/cream.png">
           <span class="content-title">Сливочное и пломбир с шоколадом
           </span>
           <a href="#" class="red-btn red-btn-big">Давайте оба!</a>
@@ -151,7 +152,7 @@
     </div>
     <div class="goods">
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267">
+        <div class="good-main"><img src="img/orange-cream.png">
         </div>
         <div class="price">
           <span class="good-price">310</span>
@@ -161,7 +162,7 @@
         <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267">
+        <div class="good-main"><img src="img/coffee-cream.png">
         </div>
         <div class="price">
           <span class="good-price">380</span>
@@ -171,7 +172,7 @@
         <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267">
+        <div class="good-main"><img src="img/strawberry-cream.png">
         </div>
         <div class="price">
           <span class="good-price">335</span>
@@ -181,7 +182,7 @@
         <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267">
+        <div class="good-main"><img src="img/creamy-cream.png">
         </div>
         <div class="price">
           <span class="good-price">415</span>
@@ -197,21 +198,21 @@
         <div class="block-list">
           <div class="block-left">
             <div class="icon-info">
-              <img src="img/icon1.jpg" width="47" height="47" alt="">
+              <img src="img/icon-cream.svg" width="48" height="48" alt="">
             </div>
             <p class="shop-text shop-icon">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
             <div class="icon-info">
-              <img src="img/icon2.jpg" width="47" height="47" alt="">
+              <img src="img/icon-leaf.svg" width="48" height="48" alt="">
             </div>
             <p class="shop-text shop-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья..</p>
           </div>
           <div class="block-right">
             <div class="icon-info">
-              <img src="img/icon3.jpg" width="47" height="47" alt="">
+              <img src="img/icon-cow.svg" width="48" height="48" alt="">
             </div>
             <p class="shop-text shop-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
             <div class="icon-info">
-              <img src="img/icon4.jpg" width="47" height="47" alt="">
+              <img src="img/icon-thermometer.svg" width="48" height="48" alt="">
             </div>
             <p class="shop-text shop-icon">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
           </div>
@@ -238,7 +239,7 @@
       </div>
     </div>
     <div class="map">
-      <div class="map-list"><img src="http://placehold.it/1200x400">
+      <div class="map-list"><img src="img/map.jpg">
         <div class="contact">
           <p class="contact-text">Адрес главного офиса и
             <br> офлайн магазина:
