--- a/inner.html
+++ b/inner.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gllacy Shop</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="inner-body">
@@ -65,7 +66,7 @@
           <a class="uzer-decor" href="#">Пусто</a>
           <div class="popup basket-hover">
             <div class="good-basket">
-              <img src="http://placehold.it/20x20">
+              <img src="img/m-orange.png">
               <span class="basket-text">Пломбир с апельсиновым джемом"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -74,7 +75,7 @@
               </div>
             </div>
             <div class="good-basket">
-              <img src="http://placehold.it/20x20">
+              <img src="img/m-strawberry.png">
               <span class="basket-text">Клубничный пломбир с присыпкой из белого шоколада"</span>
               <div class="basket-price">
                 <span class="heft">1,5кг</span>
@@ -190,7 +191,7 @@
     <div class="container-center">
       <div class="goods">
         <div class="good good-box">
-          <div class="good-main"><img src="http://placehold.it/267x267"></div>
+          <div class="good-main"><img src="img/orange-cream.png"></div>
           <div class="price">
             <span class="good-price">310</span>
             <span class="good-rub">руб</span>
@@ -200,7 +201,7 @@
         </div>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/strawberry-cream.png"></div>
         <div class="price">
           <span class="good-price">380</span>
           <span class="good-rub">руб</span>
@@ -209,7 +210,7 @@
         <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/coffee-cream.png"></div>
         <div class="price">
           <span class="good-price">355</span>
           <span class="good-rub">руб</span>
@@ -218,12 +219,12 @@
         <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/creamy-cream.png"></div>
         <span class="good-price">415 руб/кг</span>
         <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/cowberry-cream.png"></div>
         <div class="price">
           <span class="good-price">325</span>
           <span class="good-rub">руб</span>
@@ -232,12 +233,12 @@
         <a href="#" class="good-property">Сливочное с брусничным джемом</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/huckleberry-cream.png"></div>
         <span class="good-price">410 руб/кг</span>
         <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/lemon-cream.png"></div>
         <div class="price">
           <span class="good-price">375</span>
           <span class="good-rub">руб</span>
@@ -246,7 +247,7 @@
         <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/chip-cream.png"></div>
         <div class="price">
           <span class="good-price">320</span>
           <span class="good-rub">руб</span>
@@ -255,7 +256,7 @@
         <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/vanilla-cream.png"></div>
         <div class="price">
           <span class="good-price">440</span>
           <span class="good-rub">руб</span>
@@ -264,7 +265,7 @@
         <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/menthol-cream.png"></div>
         <div class="price">
           <span class="good-price">435</span>
           <span class="good-rub">руб</span>
@@ -273,7 +274,7 @@
         <a href="#" class="good-property">Сливочноe с ментоловым сиропом</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/chocolate-cream.png"></div>
         <div class="price">
           <span class="good-price">355</span>
           <span class="good-rub">руб</span>
@@ -282,7 +283,7 @@
         <a href="#" class="good-property">Сливочное с кусочками черного шоколада</a>
       </div>
       <div class="good good-box">
-        <div class="good-main"><img src="http://placehold.it/267x267"></div>
+        <div class="good-main"><img src="img/mint-cream.png"></div>
         <div class="price">
           <span class="good-price">420</span>
           <span class="good-rub">руб</span>
